--- a/biome.json
+++ b/biome.json
@@ -15,6 +15,9 @@
       },
       "style": {
         "noNonNullAssertion": "off"
+      },
+      "correctness": {
+        "noUnknownProperty": "warn"
       }
     }
   },
